--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -24,12 +24,19 @@
     margin: 20px 15px;
   }
   display: flex;
+  justify-content: center;
+}
+.portfolio__header__container {
+  width: 1210px;
+  display: flex;
   justify-content: space-between;
 }
 .portfolio__container {
-  padding: 30px 150px;
+  padding: 10px 0 30px 0px;
 }
 .header__btn {
+  display: flex;
+  align-items: center;
   a {
     color: black;
     &.btn {
@@ -37,7 +44,7 @@
       padding: 5px 10px;
       font-size: 1.2rem;
       font-weight: 500;
-      margin-left: 25px;
+      margin: 0 0 0 25px;
       background: none;
       &:hover {
         background-color: black;
@@ -64,18 +71,14 @@
 }
 
 .portfolio__works {
-  // position: relative;
-  // display: grid;
-  // grid-template-columns: 1fr 1fr;
-  // column-gap: 200px;
-  // justify-items: center;
+  display: flex;
+  justify-content: center;
   padding-top: 40px;
   width: 100%;
   height: 80vh;
-  // max-height: 300px;
 }
 #mCSB_1 {
-  width: 100%;
+  width: 1210px;
 }
 #mCSB_1_container {
   margin: 0 auto;
@@ -140,6 +143,9 @@
   background-color: rgba(0, 0, 0, 0.77);
   color: white;
   opacity: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
   h3 {
     font-size: 2rem;
